--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,7 @@ packages:
 #
 extra-deps:
   - html-parse-0.2.0.2@sha256:cafa5a9ca1698bf476a2534a3c1e9a64d128a88c2a4ac51c5e350b8d1f3d1978,3783
+  - purebred-email-0.4.1@sha256:939e248d394701549e85113619755f0be744ab06483feb7257b68951ff03b892,3406
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
