--- a/hs-rss-al-retposxto.cabal
+++ b/hs-rss-al-retposxto.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 5420f7b090584fdb1639eb280691e88107832907af727d43d62719a21a8494e5
+-- hash: 780a39dbcaedd637ba90391cf5ce9262f783c744073d55c3fbb4bb5d33270df8
 
 name:           hs-rss-al-retposxto
 version:        0.1.0.0
@@ -27,7 +27,10 @@ source-repository head
 
 library
   exposed-modules:
+      Fluo
+      Fluoj
       GrizigiBildon
+      Helpi
       MalgrandigiBildon
       Retposxto
       Simpligi
@@ -40,6 +43,7 @@ library
       Color
     , JuicyPixels
     , JuicyPixels-extra
+    , aeson
     , base >=4.7 && <5
     , base64
     , bytestring
@@ -47,7 +51,6 @@ library
     , http-client
     , lens
     , mime-mail
-    , purebred-email
     , smtp-mail
     , text
     , url
@@ -65,6 +68,7 @@ executable hs-rss-al-retposxto-exe
       Color
     , JuicyPixels
     , JuicyPixels-extra
+    , aeson
     , base >=4.7 && <5
     , base64
     , bytestring
@@ -73,7 +77,6 @@ executable hs-rss-al-retposxto-exe
     , http-client
     , lens
     , mime-mail
-    , purebred-email
     , smtp-mail
     , text
     , url
